@@ -500,10 +500,8 @@
 #define ID_TABMENU_OPENWINDOWSERVICE    40035
 #define ID_TABMENU_ATTACHTOCONTAINER    40036
 #define ID_Menu                         40037
-#define ID_PICMENU_ALIGNFORMAXIMUMLOGSIZE 40038
-#define ID_PICMENU_ALIGNFORFULL         40039
-#define ID_PICMENU_RESETPICTURESETTINGS 40040
 #define ID_PICMENU_TOGGLEAVATARDISPLAY  40041
+#define ID_PICMENU_SETTINGS             40042
 #define ID_LOG_CONTAINEROPTIONS         40045
 #define ID_TABMENU_CONTAINEROPTIONS     40046
 #define ID_LOGMENU_SHOWTIMESTAMP        40047
@@ -525,11 +523,8 @@
 #define ID_STATUSBARSETTINGS_HIDETHESTATUSBAR 40067
 #define ID_MESSAGELOGFORMATTING_SHOWGRID 40068
 #define ID_MESSAGELOGFORMATTING_USEINDIVIDUALBACKGROUNDCOLORS 40069
-#define ID_PICMENU_                     40070
 #define IDS_STATUS_OFFLINE              40071
-#define ID_PICMENU_RESETTHEAVATAR       40071
 #define IDS_STATUS_ONLINE               40072
-#define ID_PICMENU_LOADALOCALPICTUREASAVATAR 40072
 #define IDS_STATUS_AWAY                 40073
 #define ID_MESSAGELOGFORMATTING_GROUPMESSAGES 40073
 #define IDS_STATUS_DND                  40074
@@ -577,7 +572,6 @@
 #define ID_MESSAGELOG_TIMESTAMPSETTINGS 40118
 #define ID_MESSAGELOG_MESSAGELOGFORMATTING 40119
 #define ID_LOGITEMSTOSHOW_LOGSTATUSCHANGES 40120
-#define ID_PICMENU_DISABLEAUTOMATICAVATARUPDATES 40122
 #define ID_LOGMENU_MESSAGELOGSETTINGSAREGLOBAL 40124
 #define ID_USER                         40125
 #define ID_TITLEBAR_USESTATICCONTAINERICON 40126
@@ -680,7 +674,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        9
-#define _APS_NEXT_COMMAND_VALUE         40225
+#define _APS_NEXT_COMMAND_VALUE         40226
 #define _APS_NEXT_CONTROL_VALUE         1398
 #define _APS_NEXT_SYMED_VALUE           40282
 #endif
