@@ -51,6 +51,10 @@ Version 0.9.9.98 - 2005/08/25
 
         + added support for the updater plugin
         
+        + removed tabsrmms own avatar loading and managment code. It now builds on top of the
+          avatar service plugin (loadavatars.dll). You need this plugin installed in order to
+          get avatars working.
+
 Version 0.9.9.97 - 2005/07/23
 
         ! extended status tooltip working with all (recent) ICQ.dll builds. 
